# repro-rje-empty-deps

./: .gitignore  1-out-maven-repin.txt  2-build-run.txt  3-bazel-query.txt  BUILD.bazel  CheckJacksonAnnotations.java  MODULE.bazel  README.md  maven_install.json
