load("@rules_java//java:defs.bzl", "java_binary")

exports_files(["maven_install.json"])

java_binary(
    name = "check_jackson_annotations",
    srcs = ["CheckJacksonAnnotations.java"],
    main_class = "CheckJacksonAnnotations",
    deps = [
        "@maven//:com_adobe_testing_s3mock_junit4",
    ],
)
